k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-manager
  namespace: employee-ns
  labels:
    app: employee-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-manager
  template:
    metadata:
      labels:
        app: employee-manager
    spec:
      containers:
        - name: employee-manager
          image: employee-manager:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
