k8s/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: employee-manager-svc
  namespace: employee-ns
spec:
  type: ClusterIP
  selector:
    app: employee-manager
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
